# ragent-base

./: Cargo.toml  build.rs
proto/: agents.proto  ragent.proto
src/: asset_cache.rs  lib.rs  mem_gpt.rs  tasks.rs  types.rs
src/agent/: agent_worker.rs  audio_buffer.rs  base_agent.rs  converter_worker.rs  microphone_worker.rs  mod.rs  speaker_worker.rs  user_agent.rs  utils.rs
src/agent/memory/: base.rs  local_cache.rs  mod.rs  no_memory.rs  pinecone_memory.rs  redis_memory.rs
src/config/: mod.rs
src/tools/: eleven_labs_helpers.rs  mod.rs
src/tools/candle_helpers/: audio.rs  mod.rs
src/tools/chat_completion/: candle_chat_completer.rs  chat_gpt.rs  chat_gpt_chat_completer.rs  claude.rs  claude_chat_completer.rs  llama.rs  mod.rs
src/tools/image_captioning/: candle_image_captioner.rs  mod.rs
src/tools/image_generation/: candle_image_generator.rs  dalle2.rs  dalle2_image_generator.rs  mod.rs
src/tools/realtime/: chatgpt_realtime.rs  mod.rs
src/tools/voice_conversion/: eleven_labs_converter.rs  mod.rs
src/tools/voice_identifier/: azure_identifier.rs  mod.rs
src/tools/voice_synthesis/: azure_synthesizer.rs  azure_tts.rs  candle_synthesizer.rs  coqui_synthesizer.rs  eleven_labs.rs  eleven_labs_synthesizer.rs  mod.rs  openai_synthesizer.rs  openai_tts.rs  piper_synthesizer.rs  play_ht.rs  play_ht_synthesizer.rs
src/tools/voice_transcription/: deepgram_transcriber.rs  mod.rs  web_speech_transcriber.rs  whisper_transcriber.rs
src/tools/voice_transcription/whisper_transcriber/: mod.rs  multilingual.rs
