[package]
name = "ragent"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A framework for building LLM agents."

[lib]
crate-type = ["rlib"] #"staticlib", "cdylib", 

[features]
default = ["bevy", "candle"]
server = []
# TODO: Finish non-bevy implementation (or make bevy non-optional)
bevy = ["dep:bevy", "ragent_core/bevy", "common/bevy", "bevy_builder", "bevy-trait-query"]
candle = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "symphonia", "async-stream", "tokenizers"]
anthropic = ["dep:anthropic"]

[dependencies]
bevy_builder = { git = "https://github.com/empathic-ai/bevy-builder.git", optional = true }
ragent_core = { git = "https://github.com/empathic-ai/ragent-core.git", default-features = false }
ragent_derive = { git = "https://github.com/empathic-ai/ragent-derive.git" }
empathic_audio = { git = "https://github.com/empathic-ai/empathic-audio.git" }
bevy-trait-query = { git = "https://github.com/dead-money/bevy-trait-query", branch = "bevy-0.14", optional = true }
common = { git = "https://github.com/empathic-ai/common.git", default-features = false }
base64 = "0.21.5"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.120"
regex = "1.7.1"
fancy-regex = "0.11.0"
substring = "1.4.5"
async-channel = "1.8.0"
uuid = { version = "1.9.1", features = ["v4"] }
tokio = { version = "1.32.0", default-features = false, features = ["macros", "rt", "sync"] }
anyhow = "1.0.71"
bytes = "1.5.0"
futures = "0.3.25"
futures-util = "0.3.25"
nameof = "1.2.2"
documented = "0.1.2"
lazy_static = "1.4.0"
async-trait = "0.1.75"
crossbeam = "0.8.2"
# tokio-stream = { version = "0.1.15", default-features = false }
tonic = { git = "https://github.com/Catchawink/tonic.git", branch = "hyper-1.0", default-features = false, features = ["prost", "codegen"] }
futures-lite = "2.3.0"
async-compat = "0.2.3"
prost = "0.12.1"
# rodio = "0.17.3"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
byteorder = "1.5.0"
symphonia = { version = "0.5.4", default-features = false, optional = true }
# blake3 = { version = "1.5.1", features = ["pure"] }

candle-core = { git = "https://github.com/huggingface/candle.git", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle.git", optional = true }
candle-transformers = { git = "https://github.com/huggingface/candle.git", optional = true }
async-stream = { version = "0.3.5", optional = true }
tokenizers = { version = "0.19.1", default-features = false, features = ["unstable_wasm"], optional = true }

# Removed feature due to web compatibility issues: "jpeg"
image = { version = "0.25.0", default-features = false, features = ["png"] }
dyn-clone = "1.0.17"
# my-workspace-hack = { version = "0.1", path = "../../../my-workspace-hack" }

[target.'cfg(not(target_arch = "xtensa"))'.dependencies]
reqwest = { version = "0.12.4", features = ["json", "stream", "multipart"] }

[target.'cfg(all(not(target_arch = "xtensa"), not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
openai-api-rs = { git = "https://github.com/Catchawink/openai-api-rs.git", branch = "streaming" }
deepgram = { git = "https://github.com/empathic-ai/deepgram-rust-sdk.git" }
anthropic = { git = "https://github.com/Philipp-M/anthropic-rs.git", branch = "messages-api", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openai-api-rs = { git = "https://github.com/Catchawink/openai-api-rs.git", branch = "streaming", optional = true }
hf-hub = { git = "https://github.com/huggingface/hf-hub.git", features = ["tokio"], optional = true }
cpal = { version = "0.15.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
hf-hub = { git = "https://github.com/huggingface/hf-hub.git", default-features = false, optional = true }
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }

[dependencies.bevy]
version = "=0.14.0"
default-features = false
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "=0.14.0"
features = ["dynamic_linking"]

[build-dependencies]
tonic-build = { version = "0.10.2", default-features = false, features = ["prost"] }
prost-build = "0.12.3"

[package.metadata.cargo-machete]
ignored = ["prost"]
