[package]
name = "ragent"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A framework for building LLM agents."

# [lib]
# crate-type = ["rlib"] #"staticlib", "cdylib", 

[features]
default = ["bevy", "candle", "tokio", "futures"]
server = []
# TODO: Finish non-bevy implementation (or make bevy non-optional)
# bevy = ["dep:bevy", "ragent_core/bevy", "bevy-trait-query"]
bevy = ["dep:bevy", "ragent_core/bevy", "common/bevy", "flux/bevy", "bevy-trait-query"]
candle = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "symphonia", "async-stream", "tokenizers"]
anthropic = ["dep:anthropic"]
dynamic_linking = ["bevy?/dynamic_linking", "flux/dynamic_linking", "ragent_core/dynamic_linking"]
tonic = ["dep:tonic", "prost"]
tokio = ["dep:tokio", "tokio-tungstenite"]
futures = ["dep:futures", "futures-util", "futures-lite"]
prost = ["dep:prost"]

[dependencies]
# TODO: Replace with crates.io reference once Tonic officially supports Axum v0.8
tonic = { version = "0.12.3", default-features = false, features = ["prost", "codegen"], optional = true }
flux = { git = "https://github.com/empathic-ai/flux.git", default-features = false }
ragent_core = { git = "https://github.com/empathic-ai/ragent-core.git", default-features = false }
ragent_derive = { git = "https://github.com/empathic-ai/ragent-derive.git", default-features = false }
anyhow = "1.0.71"
serde = { version = "1.0.149", features = ["derive"] }
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "c930ab7e1a234f02a0f49350bf38f03f45e53757", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "c930ab7e1a234f02a0f49350bf38f03f45e53757", optional = true }
candle-transformers = { git = "https://github.com/huggingface/candle.git", rev = "c930ab7e1a234f02a0f49350bf38f03f45e53757", optional = true }
async-stream = { version = "0.3.5", optional = true }
tokenizers = { version = "0.19.1", default-features = false, features = ["unstable_wasm"], optional = true }
prost = { version = "0.13.3", optional = true }
documented = "0.1.2"

# Removed feature due to web compatibility issues: "jpeg"
image = { version = "0.25.0", default-features = false, features = ["png"] }
dyn-clone = "1.0.17"
ringbuf = "0.4.1"

rust_decimal = "1.36"
rust_decimal_macros = "1.36"

[target.'cfg(not(target_arch = "xtensa"))'.dependencies]
delune = { git = "https://github.com/empathic-ai/delune.git" }
bevy-trait-query = { version = "0.7.0", optional = true }
common = { git = "https://github.com/empathic-ai/common.git", default-features = false }
base64 = "0.22.1"
serde_json = "1.0"
regex = "1.7.1"
fancy-regex = "0.11.0"
substring = "1.4.5"
async-channel = "1.8.0"
uuid = { version = "1.9.1", features = ["v4"] }
tokio = { version = "1.32.0", default-features = false, features = ["macros", "rt", "sync"], optional = true }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
bytes = "1.5.0"
nameof = "1.2.2"
lazy_static = "1.4.0"
async-trait = "0.1.75"
crossbeam = "0.8.2"
# tokio-stream = { version = "0.1.15", default-features = false }
futures = { version = "0.3.25", optional = true }
futures-util = { version = "0.3.31", optional = true }
futures-lite = { version = "2.3.0", optional = true }
async-compat = "0.2.4"
# rodio = "0.17.3"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
byteorder = "1.5.0"
symphonia = { version = "0.5.4", default-features = false, optional = true }
smart-clone = "0.1.0"

[target.'cfg(all(not(target_arch = "xtensa"), not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
openai-api-rs = { git = "https://github.com/Catchawink/openai-api-rs.git" }
deepgram = { git = "https://github.com/empathic-ai/deepgram-rust-sdk.git" }
anthropic = { git = "https://github.com/AbdelStark/anthropic-rs.git", default-features = false, optional = true }
tokio-tungstenite = { version = "0.24.0", optional = true }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_arch = "xtensa")))'.dependencies]
openai-api-rs = { git = "https://github.com/Catchawink/openai-api-rs.git", optional = true }
hf-hub = { git = "https://github.com/Catchawink/hf-hub.git", default-features = false, features = ["rustls-tls", "ureq", "tokio"], optional = true }
cpal = { version = "0.15.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
hf-hub = { git = "https://github.com/Catchawink/hf-hub.git", default-features = false, features = ["rustls-tls"], optional = true }
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }

[dependencies.bevy]
version = "=0.15.0"
default-features = false
optional = true

[build-dependencies]
tonic-build = { version = "0.10.2", default-features = false, features = ["prost"] }
prost-build = "0.12.3"

[package.metadata.cargo-machete]
ignored = ["prost"]